Bug 229052. Treat pre-formatted newlines like BRs, preserving the break type in nsBlockFrame::ReflowInlineFrame. r+sr=dbaron